--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -342,7 +342,7 @@
   number={1},
   pages={1--10},
   year={2012},
-  publisher={Wiley Online Library
+  publisher={Wiley Online Library}
 }
 
 @book{ditlevsen2011,
