--- a/latex/main.tex
+++ b/latex/main.tex
@@ -871,7 +871,7 @@ For vores spiralopgaver gjorde vi brug af $n=[1,2,3,4], w=[3.1,3.1,3.1,3.05]$. F
 \begin{minipage}{\linewidth}
 	\begin{minipage}[b]{.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_test_spiraling_1}
-		\captionof{figure}{Accot og Zhai's formulering tilpasset testperson 2, med $ID_s$ på $x$-aksen og tiden $T$ på $y$-aksen}
+		\captionof{figure}{Accot og Zhai's formulering tilpasset testdeltager 2, med $ID_s$ på $x$-aksen og tiden $T$ på $y$-aksen}
 		\label{fig:spiralingtest1}
 	\end{minipage}
 	\begin{minipage}[b]{0.1\linewidth}
@@ -879,7 +879,7 @@ For vores spiralopgaver gjorde vi brug af $n=[1,2,3,4], w=[3.1,3.1,3.1,3.05]$. F
 	\end{minipage}
 	\begin{minipage}[b]{0.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_test_spiraling_2}
-		\captionof{figure}{Accot og Zhai's formulering tilpasset testperson 10, med $ID_s$ på $x$-aksen og tiden $T$ på $y$-aksen}
+		\captionof{figure}{Accot og Zhai's formulering tilpasset testdeltager 10, med $ID_s$ på $x$-aksen og tiden $T$ på $y$-aksen}
 		\label{fig:spiralingtest2}
 	\end{minipage}
 \end{minipage}
