--- a/latex/main.tex
+++ b/latex/main.tex
@@ -49,7 +49,7 @@ Vi vil i denne rapport udføre to forsøg, hvis formål er at indsamle data til 
 
 \addcontentsline{toc}{section}{Forventninger til læseren}
 \section*{Forventninger til læseren}
-Der stilles forventinger til læseren om indledende universitetsmatematik, eksempelvis \cite{kolman2008}, indledende statistik- \& sandsynlighedregning, eksempelvis \cite{ditlevsen2011} og \cite{soerensen2003}. Endvidere forventes et indledende kendskab til menneske-datamaskine interaktion, eksempelvis \cite{hartson2012}.
+Der stilles forventinger til læseren om indledende universitetsmatematik, eksempelvis \cite{kolman2008}, indledende statistik- \& sandsynlighedregning, eksempelvis \cite{ditlevsen2011} og \cite{soeresen2003}. Endvidere forventes et indledende kendskab til menneske-datamaskine interaktion, eksempelvis \cite{hartson2012}.
 
 \addcontentsline{toc}{chapter}{Teori}
 \chapter*{Teori}
